# paramorator

./: LICENSE  README.md  paramorator.py  pyproject.toml  tests.py
